force-app/main/default/objects/CareBenefitVerifyRequest__c/CareBenefitVerifyRequest__c.object-meta.xml
<CustomObject>
    <label>Care Benefit Verify Request</label>
    <pluralLabel>Care Benefit Verify Requests</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Request Number</label>
        <displayFormat>BVR-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject> 