force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/External_API_Status__c.field-meta.xml
<CustomField>
    <fullName>External_API_Status__c</fullName>
    <description>The status returned from the external benefits verification API.</description>
    <label>External API Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 