force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/External_API_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>External_API_Status_Reason__c</fullName>
    <description>The reason or detail message associated with the status from the external API.</description>
    <label>External API Status Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField> 