force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/ProcedureCode__c.field-meta.xml
<CustomField>
    <fullName>ProcedureCode__c</fullName>
    <label>Procedure Code (CPT)</label>
    <length>10</length>
    <type>Text</type>
</CustomField> 