force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <referenceTo>HealthCloudGA__Provider__c</referenceTo>
    <relationshipLabel>Benefit Verifications</relationshipLabel>
    <relationshipName>BenefitVerifications</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField> 