force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/ServiceDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceDate__c</fullName>
    <label>Service Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField> 