force-app/main/default/objects/CareBenefitVerifyRequest__c/validationRules/ValidMemberPlan.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidMemberPlan</fullName>
    <active>true</active>
    <description>Ensures that the Member Plan is valid for the Patient.</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK(MemberPlan__c)),
        NOT(ISBLANK(Patient__c)),
        NOT(ISBLANK(MemberPlan__r.Member__c)),
        MemberPlan__r.Member__c != Patient__c
    )</errorConditionFormula>
    <errorMessage>Invalid Member Plan reference: The Member Plan must be associated with the Patient.</errorMessage>
</ValidationRule> 